Add instructions for bingo

--- a/bingo.html
+++ b/bingo.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="bingo.css">
 </head>
 <body>
+    <main>
+        <h1>BINGO</h1>
+        <div class="grid">
+            <small> Für jedes gelöste Feld bitte ein Beweisfoto in die Whatsapp-Gruppe posten. Viel Spaß! </small>
+        </div>
+    </main>
 </body>
 </html>
