Refine html template

--- a/bingo.html
+++ b/bingo.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <main>
-        <h1>BINGO</h1>
+        <h1>BINGO 2.0</h1>
         <div class="grid">
-            <small> Für jedes gelöste Feld bitte ein Beweisfoto in die Whatsapp-Gruppe posten. Viel Spaß! </small>
+            <small> Für jedes gelöste Feld bitte ein Beweisfoto in die Whatsapp-Gruppe posten.<br>Die meisten Bingos gewinnen. Du hast Zeit bis 2 Uhr. Viel Spaß! </small>
         </div>
     </main>
 </body>
