--- a/bingo.html
+++ b/bingo.html
@@ -9,7 +9,7 @@
     <main>
         <h1>BINGO 2.0</h1>
         <div class="grid">
-            <small> Für jedes gelöste Feld bitte ein Beweisfoto in die Whatsapp-Gruppe posten.<br>Die meisten Bingos gewinnen. Du hast Zeit bis 2 Uhr. Viel Spaß! </small>
+            <small> Post an evidence photo for every solved item into the whatsapp group.<br>The most bingos win. You have until 2 am. Have fun!</small>
         </div>
     </main>
 </body>
